--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <li><a href="./mainApp/todo/todo.html">To-do List</a></li>
                 <li><a href="./mainApp/notes/notes.html">Notes</a></li>
                 <li><a href="https://amity.refread.com/#/home" target="_blank" rel="noopener">eLibrary</a></li>
-                <li id="right-nav"><i class="material-icons" style="font-size: 40px;">account_circle</i></li>
+                <li id="right-nav"><a class="material-icons" style="font-size: 40px;">account_circle</a></li>
                 <li id="right-nav"><a href="./mainApp/about/about.html">About</a></li>
             </ul>
         </nav>
