Bullshit modification for college

--- a/index.html
+++ b/index.html
@@ -23,8 +23,9 @@
         <nav>
             <ul>
                 <li><a href="#" class="active_nav">Home</a></li>
-                <li><a href="./mainApp/todo/todo.html">To-do List</a></li>
-                <li><a href="./mainApp/notes/notes.html">Notes</a></li>
+                <li><a href="./mainApp/pages/news.html">News</a></li>
+                <li><a href="./mainApp/pages/Manistifo.html">Manifesto</a></li>
+                <li><a href="./mainApp/about/about.html">About US</a></li>
                 <li><a href="https://amity.refread.com/#/home" target="_blank" rel="noopener">eLibrary</a></li>
                 <li id="right-nav"><a class="material-icons" style="font-size: 40px;">account_circle</a></li>
                 <li id="right-nav"><a href="./mainApp/about/about.html">About</a></li>
